# SafeTensors.jl

./: .gitignore  LICENSE  Project.toml  README.md
.github/workflows/: CI.yml  codecov.yaml
src/: SafeTensors.jl
test/: Manifest.toml  Project.toml  README.md  gendata.py  model.safetensors  pyproject.toml  runtests.jl  torch.safetensors  torch_metadata.safetensors
test/non_sharded/: model.safetensors  model.with_metadata.safetensors
test/sharded/: model-00001-of-00006.safetensors  model-00002-of-00006.safetensors  model-00003-of-00006.safetensors  model-00004-of-00006.safetensors  model-00005-of-00006.safetensors  model-00006-of-00006.safetensors  model.safetensors.index.json
